--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<%= yield %>
+
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="#"> HospedaOn </a>
+				<ul class="nav">
+					<li><%= link_to "Todos os Quartos", quartos_path %></li>
+			</div>
+		</div>
+	</div>		
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
